CICD-35 Fix link

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <a href="172.16.101.74/stg/sports-location-tracker"
-      >STG: Sports location tracker</a
-    >
+    <a href="/stg/sports-location-tracker">STG: Sports location tracker</a>
   </body>
 </html>
