--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <a href="/stg/sports-location-tracker">STG: Sports location tracker</a>
+    <a href="/stg/datavarasto">STG: Datavarasto</a>
   </body>
 </html>
