--- a/index.html
+++ b/index.html
@@ -5,7 +5,34 @@
     <title>nginx default</title>
   </head>
   <body>
-    <a href="/stg/sports-location-tracker">STG: Sports location tracker</a>
-    <a href="/stg/datavarasto">STG: Datavarasto</a>
+    <table>
+      <tr>
+        <td><b>STG</b></td>
+      </tr>
+      <tr>
+        <td>
+          <a href="/stg/sports-location-tracker">Sports location tracker</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="/stg/datavarasto">Datavarasto</a>
+        </td>
+      </tr>
+
+      <tr>
+        <td><b>PRD</b></td>
+      </tr>
+      <tr>
+        <td>
+          <a href="/prd/sports-location-tracker">Sports location tracker</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="/prd/datavarasto">Datavarasto</a>
+        </td>
+      </tr>
+    </table>
   </body>
 </html>
